Agregado porcentaje individial en egresos

--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ body{
   color: #00171f;
 }
 
-.container-porcentaje .porcentaje{
+.porcentaje{
   background-color: #00171f;
   color: #fff;
   font-weight: 500;
